--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "homepage": "https://EshaanGupta1011.github.io/Portfolio/",
   "name": "portfolio",
+  "homepage": "https://EshaanGupta1011.github.io/portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
