--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://EshaanGupta1011.github.io/portfolio/",
+  "homepage": "https://EshaanGupta1011.github.io/portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,8 +15,8 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "lottie-react": "^2.4.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.1",
     "react-scroll": "^1.9.0"
@@ -32,6 +32,6 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "gh-pages": "^6.3.0",
     "globals": "^15.12.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.11"
   }
 }
