--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,14 +16,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Fetch all files
+        run: git fetch --unshallow
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18 # Change if your project uses a different version
+          node-version: 18
           cache: "npm"
 
-      - name: Install dependencies
-        run: npm install
+      - name: Clean install
+        run: rm -rf node_modules package-lock.json && npm install
 
       - name: Build project
         run: npm run build
@@ -31,6 +34,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages # Deploy to gh-pages branch
-          folder: dist # The folder to deploy
-          clean: true # Removes old files from the branch before deploying
+          branch: gh-pages
+          folder: dist
+          clean: true
