--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Debug file existence
-        run: ls -R src/assets/
+      - name: List all files in the repository
+        run: |
+          echo "Listing all files in the repository"
+          ls -R # List all files recursively in the repository
 
       - name: Verify file existence before build
         run: |
